fix: favorites page recently viewed section mobile layout

--- a/src/styles/components/_recently-viewed-products.scss
+++ b/src/styles/components/_recently-viewed-products.scss
@@ -1,2 +1,13 @@
+@use '../media' as *;
+
 .recently-viewed-products {
+	&__grid {
+		display: grid;
+		grid-template-columns: repeat(4, minmax(0, 1fr));
+		gap: 10rem;
+
+		@include tablet {
+			grid-template-columns: repeat(2, minmax(0, 1fr));
+		}
+	}
 }
